--- a/app/src/main/res/layout/activity_classfiy.xml
+++ b/app/src/main/res/layout/activity_classfiy.xml
@@ -2,17 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     android:orientation="vertical">
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_30"
-        android:background="@color/background"/>
+        android:background="@color/white"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_47"
-        android:orientation="horizontal"
         android:focusable="true"
-        android:focusableInTouchMode="true">
+        android:background="@color/white"
+        android:focusableInTouchMode="true"
+        android:orientation="horizontal">
         <ImageView
             android:id="@+id/at_classfiy_iv_back"
             android:layout_width="@dimen/dp_32"
@@ -55,18 +57,21 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:baselineAligned="false"
-        android:orientation="horizontal">
+        android:focusableInTouchMode="true">
         <ListView
             android:id="@+id/at_classfiy_lv_menu"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#EDECEC" />
+            android:background="@color/background" />
         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/dp_10"
+            android:layout_marginRight="@dimen/dp_12"
+            android:layout_marginLeft="@dimen/dp_3"
             android:layout_weight="3"
-            android:background="@android:color/white">
+            android:background="@drawable/white_conner_8">
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/ac_classify_rv"
                 android:layout_width="match_parent"
