--- a/app/src/main/res/layout/activity_pulish_goods.xml
+++ b/app/src/main/res/layout/activity_pulish_goods.xml
@@ -79,11 +79,10 @@
                 android:background="@color/background"
                 android:layout_marginLeft="@dimen/dp_12"
                 android:layout_marginRight="@dimen/dp_12"></View>
-
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
                 <LinearLayout
                     android:id="@+id/at_publish_goods_ll_3"
                     android:layout_width="match_parent"
@@ -105,22 +104,22 @@
                         android:textColorHint="@color/text9"
                         android:textSize="@dimen/sp_13"/>
                 </LinearLayout>
-                <me.zhouzhuo.zzimagebox.ZzImageBox
+                <ImageView
+                    android:visibility="visible"
                     android:id="@+id/ac_pulishGoods_iv_goodsImg"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/dp_75"
-                    android:layout_below="@id/at_publish_goods_ll_3"
+                    android:layout_width="@dimen/dp_60"
+                    android:layout_height="@dimen/dp_60"
                     android:layout_marginLeft="@dimen/dp_12"
-                    app:zib_left_margin="20dp"
-                    app:zib_right_margin="20dp"
-                    app:zib_img_padding="5dp"
-                    app:zib_img_size_one_line="4"
-                    app:zib_max_line="3"
-                    app:zib_img_deletable="true"
-                    app:zib_img_add="@drawable/iv_add"
-                    app:zib_img_default="@drawable/iv_default"
-                    app:zib_img_delete="@drawable/iv_delete"/>
-            </RelativeLayout>
+                    android:src="@drawable/add_pic"/>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv_image1"
+                    android:visibility="gone"
+                    android:layout_marginLeft="@dimen/dp_12"
+                    android:layout_marginRight="@dimen/dp_12"
+                    android:layout_marginTop="@dimen/dp_10"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_1"
@@ -129,10 +128,10 @@
                 android:layout_marginRight="@dimen/dp_12"
                 android:layout_marginTop="@dimen/dp_13"></View>
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
                 <LinearLayout
                     android:id="@+id/at_publish_goods_ll_4"
                     android:layout_width="match_parent"
@@ -154,22 +153,21 @@
                         android:textColorHint="@color/text9"
                         android:textSize="@dimen/sp_13"/>
                 </LinearLayout>
-                <me.zhouzhuo.zzimagebox.ZzImageBox
+                <ImageView
                     android:id="@+id/ac_pulishGoods_iv_goodsContent"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/dp_75"
+                    android:layout_width="@dimen/dp_60"
+                    android:layout_height="@dimen/dp_60"
                     android:layout_marginLeft="@dimen/dp_12"
-                    android:layout_below="@id/at_publish_goods_ll_4"
-                    app:zib_left_margin="20dp"
-                    app:zib_right_margin="20dp"
-                    app:zib_img_padding="5dp"
-                    app:zib_img_size_one_line="4"
-                    app:zib_max_line="2"
-                    app:zib_img_deletable="true"
-                    app:zib_img_add="@drawable/iv_add"
-                    app:zib_img_default="@drawable/iv_default"
-                    app:zib_img_delete="@drawable/iv_delete"/>
-            </RelativeLayout>
+                    android:src="@drawable/add_pic"/>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv_image2"
+                    android:visibility="gone"
+                    android:layout_marginLeft="@dimen/dp_12"
+                    android:layout_marginRight="@dimen/dp_12"
+                    android:layout_marginTop="@dimen/dp_10"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_1"
@@ -203,7 +201,6 @@
                     android:layout_marginLeft="@dimen/dp_20"
                     android:textColorHint="@color/text9"
                     android:textSize="@dimen/sp_13"/>
-
                 <ImageView
                     android:id="@+id/ac_publishGoods_iv_hint1"
                     android:layout_width="@dimen/dp_20"
