--- a/app/src/main/res/layout/item_classfiy_home_category.xml
+++ b/app/src/main/res/layout/item_classfiy_home_category.xml
@@ -1,30 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:orientation="vertical">
-        <ImageView
-            android:id="@+id/item_album"
-            android:layout_width="85dp"
-            android:layout_height="85dp"
-            android:layout_gravity="center_horizontal"
-            android:scaleType="centerCrop"
-            android:src="@mipmap/ic_launcher"/>
-        <TextView
-            android:id="@+id/item_home_name"
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center"
-            android:singleLine="true"
-            android:text="标题"
-            android:textSize="12dp" />
-    </LinearLayout>
-
-
+    android:layout_height="@dimen/dp_120"
+    android:orientation="vertical">
+    <ImageView
+        android:id="@+id/item_album"
+        android:layout_width="85dp"
+        android:layout_height="85dp"
+        android:layout_gravity="center_horizontal"
+        android:scaleType="centerCrop"
+        android:src="@mipmap/ic_launcher"/>
+    <TextView
+        android:id="@+id/item_home_name"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center"
+        android:singleLine="true"
+        android:layout_marginTop="@dimen/dp_5"
+        android:text="标题"
+        android:textSize="12dp" />
 </LinearLayout>
 
 
