--- a/app/src/main/res/layout/item_classfiy_menu.xml
+++ b/app/src/main/res/layout/item_classfiy_menu.xml
@@ -2,14 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/dp_40"
-    android:orientation="vertical" >
+    android:orientation="horizontal" >
+    <View
+        android:id="@+id/item_tag"
+        android:visibility="visible"
+        android:layout_width="@dimen/dp_2"
+        android:layout_height="@dimen/dp_20"
+        android:background="@color/app_theme"
+        android:layout_marginLeft="@dimen/dp_12"
+        android:layout_gravity="center"/>
     <TextView 
         android:id="@+id/item_name"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:text=""
+        android:text="hello world"
         android:gravity="center"
         android:textSize="@dimen/sp_14"
         android:textColor="@color/app_theme"/>
-
 </LinearLayout>
