--- a/app/src/main/res/layout/activity_classfiy.xml
+++ b/app/src/main/res/layout/activity_classfiy.xml
@@ -64,19 +64,28 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/background" />
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/dp_10"
             android:layout_marginRight="@dimen/dp_12"
             android:layout_marginLeft="@dimen/dp_3"
             android:layout_weight="3"
-            android:background="@drawable/white_conner_8">
+            android:background="@drawable/white_conner_8"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/ac_classify_tv_title"
+                android:text="热门推荐"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/text3"
+                android:textSize="@dimen/sp_15"
+                android:layout_margin="@dimen/dp_14"/>
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/ac_classify_rv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
-        </RelativeLayout>
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
