--- a/app/src/main/res/layout/activity_confirm_order.xml
+++ b/app/src/main/res/layout/activity_confirm_order.xml
@@ -69,12 +69,13 @@
                 android:layout_marginRight="@dimen/dp_12"></View>
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_125">
+                android:layout_height="wrap_content">
                 <ImageView
                     android:id="@+id/at_confirm_order_iv_pic"
                     android:layout_width="@dimen/dp_80"
                     android:layout_height="@dimen/dp_80"
                     android:layout_marginTop="@dimen/dp_5"
+                    android:scaleType="fitXY"
                     android:layout_marginLeft="@dimen/dp_12"
                     android:src="@mipmap/ic_launcher"/>
 
@@ -123,57 +124,58 @@
                     android:textColor="@color/text9"
                     android:layout_marginTop="@dimen/dp_5"
                     android:text="X1"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
+                <RelativeLayout
+                    android:visibility="gone"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/at_confirm_order_iv_pic"
-                    android:textColor="@color/text3"
-                    android:textSize="@dimen/sp_14"
-                    android:text="选择提货方式"
-                    android:layout_marginTop="@dimen/dp_12"
-                    android:layout_marginLeft="@dimen/dp_12"/>
-
-                <LinearLayout
-                    android:layout_width="@dimen/dp_85"
-                    android:layout_height="@dimen/dp_21"
-                    android:orientation="horizontal"
-                    android:layout_below="@id/at_confirm_order_iv_pic"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginTop="@dimen/dp_10"
-                    android:layout_marginRight="@dimen/dp_12"
-                    android:padding="@dimen/dp_2"
-                    android:background="@drawable/stroke_app_theme">
-
-                    <Button
-                        android:id="@+id/ac_confirmOrder_btn_ziti"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:background="@android:color/white"
-                        android:text="自提"
+                    android:id="@+id/ac_confirmOrder_rl_tihuo"
+                    android:layout_below="@id/at_confirm_order_iv_pic">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:textColor="@color/text3"
-                        android:textSize="@dimen/sp_13"/>
+                        android:textSize="@dimen/sp_14"
+                        android:text="选择提货方式"
+                        android:layout_marginTop="@dimen/dp_12"
+                        android:layout_marginLeft="@dimen/dp_12"/>
+                    <LinearLayout
+                        android:layout_width="@dimen/dp_85"
+                        android:layout_height="@dimen/dp_21"
+                        android:orientation="horizontal"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginTop="@dimen/dp_10"
+                        android:layout_marginRight="@dimen/dp_12"
+                        android:padding="@dimen/dp_2"
+                        android:background="@drawable/stroke_app_theme">
+                        <Button
+                            android:id="@+id/ac_confirmOrder_btn_ziti"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:background="@android:color/white"
+                            android:text="自提"
+                            android:textColor="@color/text3"
+                            android:textSize="@dimen/sp_13"/>
 
-                    <Button
-                        android:id="@+id/ac_confirmORder_btn_peisong"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:background="@color/app_theme"
-                        android:textSize="@dimen/sp_13"
-                        android:textColor="@android:color/white"
-                        android:text="配送"/>
-
-                </LinearLayout>
-
+                        <Button
+                            android:id="@+id/ac_confirmORder_btn_peisong"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:background="@color/app_theme"
+                            android:textSize="@dimen/sp_13"
+                            android:textColor="@android:color/white"
+                            android:text="配送"/>
+                    </LinearLayout>
+                </RelativeLayout>
             </RelativeLayout>
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_1"
                 android:background="@color/background"
                 android:layout_marginLeft="@dimen/dp_12"
-                android:layout_marginRight="@dimen/dp_12"></View>
+                android:layout_marginRight="@dimen/dp_12"
+                android:layout_marginTop="@dimen/dp_5"/>
             <RelativeLayout
                 android:id="@+id/at_confirm_order_rl_peisong"
                 android:visibility="visible"
@@ -244,6 +246,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="￥625.00"
+                    android:textStyle="bold"
                     android:textColor="@color/app_theme"
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="@dimen/dp_12"
@@ -251,6 +254,7 @@
                     android:textSize="@dimen/sp_14"/>
 
                 <TextView
+                    android:id="@+id/ac_confirmOrder_tv_goodsAllNum"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toLeftOf="@id/at_confirm_order_tv_price"
@@ -273,6 +277,7 @@
                     android:layout_marginLeft="@dimen/dp_10"
                     android:src="@drawable/pop_goods_detail_lingdang"/>
                 <TextView
+                    android:id="@+id/ac_confirmOrder_tv_lisheng"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="成为农品街代言人此单立省403元"
@@ -464,7 +469,7 @@
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
-    
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_49"
@@ -480,6 +485,7 @@
             android:textSize="@dimen/sp_14"
             android:layout_marginLeft="@dimen/dp_89"/>
         <TextView
+            android:id="@+id/ac_confirmOrder_tv_realPay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -487,7 +493,8 @@
             android:textColor="@color/app_theme"
             android:textSize="@dimen/sp_14"
             android:layout_marginLeft="@dimen/dp_2"
-            android:text="￥220"/>
+            android:text="￥220"
+            android:textStyle="bold"/>
 
         <Button
             android:id="@+id/ac_confirmOrder_btn_pay"
