--- a/app/src/main/res/layout/fragment_my_bill_list.xml
+++ b/app/src/main/res/layout/fragment_my_bill_list.xml
@@ -1,8 +1,8 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.zthx.npj.ui.fragment.MyBillListFragment">
+    android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/fg_want_buy_manager_list"
@@ -10,5 +10,21 @@
         android:layout_height="match_parent">
 
     </android.support.v7.widget.RecyclerView>
-
-</FrameLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_100"
+            android:src="@drawable/shangpindingdan"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/sp_13"
+            android:textColor="@color/text3"
+            android:text="您还没有相关的订单"/>
+    </LinearLayout>
+</LinearLayout>
