--- a/app/src/main/res/layout/fragment_order_list.xml
+++ b/app/src/main/res/layout/fragment_order_list.xml
@@ -1,14 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragment.OrderListFragment">
-
+    android:background="@color/background"
+    tools:context=".ui.fragment.OrderListFragment"
+    android:gravity="center"
+    android:orientation="vertical">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/fg_order_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </android.support.v7.widget.RecyclerView>
-
-</FrameLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_100"
+            android:src="@drawable/shangpindingdan"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/sp_13"
+            android:textColor="@color/text3"
+            android:text="您还没有相关的订单"/>
+        <TextView
+            android:id="@+id/fg_orderList_toMakeOrder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_20"
+            android:textSize="@dimen/sp_16"
+            android:textColor="@color/app_theme"
+            android:text="去下单"/>
+    </LinearLayout>
+</LinearLayout>
