--- a/app/src/main/res/layout/item_classfiy_home_category.xml
+++ b/app/src/main/res/layout/item_classfiy_home_category.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/dp_120"
+    android:layout_height="@dimen/dp_100"
+    android:layout_marginLeft="@dimen/dp_8"
+    android:layout_marginTop="@dimen/dp_5"
+
     android:orientation="vertical">
     <ImageView
         android:id="@+id/item_album"
-        android:layout_width="85dp"
-        android:layout_height="85dp"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
         android:layout_gravity="center_horizontal"
         android:scaleType="centerCrop"
         android:src="@mipmap/ic_launcher"/>
