--- a/app/src/main/res/layout/activity_goods_detail.xml
+++ b/app/src/main/res/layout/activity_goods_detail.xml
@@ -586,13 +586,15 @@
                 android:id="@+id/ac_goodsDetail_rv_content"
                 android:layout_marginTop="@dimen/dp_5"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_500"/>
+                android:layout_height="@dimen/dp_500"
+                android:layout_marginBottom="@dimen/dp_50"/>
             <android.support.v7.widget.RecyclerView
                 android:visibility="gone"
                 android:id="@+id/ac_goodsDetail_rv_comment"
                 android:layout_marginTop="@dimen/dp_5"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_400"/>
+                android:layout_height="@dimen/dp_400"
+                android:layout_marginBottom="@dimen/dp_50"/>
             <LinearLayout
                 android:id="@+id/ac_goodsDetail_ll_know"
                 android:visibility="gone"
