--- a/app/src/main/res/layout/activity_goods_search.xml
+++ b/app/src/main/res/layout/activity_goods_search.xml
@@ -108,8 +108,15 @@
             android:layout_height="@dimen/dp_1"
             android:background="@color/background"/>
         <android.support.v7.widget.RecyclerView
+            android:visibility="gone"
             android:id="@+id/at_home_search_rv_result"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/dp_150"
+            android:text="搜索结果不存在，换个关键词试试？"/>
     </LinearLayout>
 </LinearLayout>
