--- a/app/src/main/res/layout/item_goods_img_detail.xml
+++ b/app/src/main/res/layout/item_goods_img_detail.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
         <ImageView
             android:id="@+id/item_goodsImgDetail_iv_img"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:scaleType="fitXY"
